# anti_procrastination

./: .gitignore  LICENSE.txt  README.md  cli.py  package.cmd  pyproject.toml  run.cmd
assistant/: core.py  db.py  llm_quotes.py  prompts.py  statistics.py  utils.py
src/apologies_for_being_human/: __main__.py  core.py  db.py  main_menu.py  prompts.py  statistics.py
