[project]
name = "apologies_for_being_human"
version = "0.1.0"
description = "A CLI tool for apologizing for being born as a human."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.14.2",
    "rich>=14.0.0",
    "ruff>=0.12.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
apologies_for_being_human = "apologies_for_being_human.__main__:main"
